--- a/background.html
+++ b/background.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
+<script src="jquery-1.6.1.min.js" type="text/javascript"></script>
 <script src="notification.js" type="text/javascript"></script>
 <script>
 var timer = null;
