--- a/options.html
+++ b/options.html
@@ -1,39 +1,39 @@
 <html>
 <head><title>Redmine Notification Extension Options</title></head>
+<script type="text/javascript" src="jquery-1.6.1.min.js"></script>
+<script src="notification.js" type="text/javascript"></script>
 <script type="text/javascript">
 
 // Saves options to localStorage.
 function save_options() {
-  var redmineUrl = document.getElementById("redmineUrl");
-  localStorage["redmineUrl"] = redmineUrl.value;
-
-  var apiKey = document.getElementById("apiKey");
-  localStorage["apiKey"] = apiKey.value;
-
+  $(".setting-item").each(function() {
+    var id = $(this).attr("id");
+    settings[id] = $(this).val();
+  });
   var status = document.getElementById("status");
   status.innerHTML = "Options Saved.";
   setTimeout(function() {
     status.innerHTML = "";
-  }, 750);
+  }, 1000);
 }
 
-// Restores select box state to saved value from localStorage.
-function restore_options() {
-  var redmineUrl = localStorage["redmineUrl"];
-  if (redmineUrl) {
-    document.getElementById("redmineUrl").value = redmineUrl;
-  }
-  var apiKey = localStorage["apiKey"];
-  if (apiKey) {
-    document.getElementById("apiKey").value = apiKey;
-  }
-}
+$(document).ready(function() {
+  $(".setting-item").each(function() {
+    var id = $(this).attr("id");
+    $(this).val(settings[id]);
+  });
+
+  $("#advanced-settings-label").toggle(
+    function() { $("#advanced-settings").show(); $("#advanced-settings-label .collapse-icon").text("-"); },
+    function() { $("#advanced-settings").hide(); $("#advanced-settings-label .collapse-icon").text("+"); }
+  );
+});
 
 </script>
 <style>
 body {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 #header {
     background-color: #507AAA;
@@ -43,34 +43,69 @@ body {
     position: relative;
 }
 #header img {
-	float: left;
-	left: 0px;
-	top: 0px;
-	height: 64px;
-	width: 64px;
+    float: left;
+    left: 0px;
+    top: 0px;
+    height: 64px;
+    width: 64px;
 }
 
 #content {
-	clear: both;
-	margin-left: 20px;
+    clear: both;
+    margin-left: 20px;
+}
+
+.settings-label {
+    font-size: medium;
+    font-weight: bold;
+    background-color: #2c4056;
+    color: #f8f8f8;
+    padding: 2px;
+}
+#advanced-settings-label {
+    cursor: pointer;
+}
+
+#advanced-settings {
+    display: none;
 }
 </style>
-<body onload="restore_options()">
-<div id="header">
-<img src="icon.png"/>
-<h1>Redmine Notification Settings</h1>
-</div>
-<div id="content">
-<fieldset>
-	<legend>Your redMine URL:</legend>
-	<input type="text" id="redmineUrl" size="80"/>
-</fieldset>
-<fieldset>
-	<legend>Your redMine API Key:</legend>
-	<input type="text" id="apiKey" size="60"/>
-</fieldset>
-<button onclick="save_options()">Save</button>
-<span id="status"></span>
-</div>
+<body>
+  <div id="header">
+    <img src="icon.png"/>
+    <h1>Redmine Notification Settings</h1>
+  </div>
+  <div id="content">
+    <h2 class="settings-label">
+      Basic settings
+    </h2>
+    <fieldset>
+      <legend>Your Redmine URL:</legend>
+      <input type="text" id="redmineUrl" class="setting-item" size="80"/>
+    </fieldset>
+    <fieldset>
+      <legend>Your Redmine API Key:</legend>
+      <input type="text" id="apiKey" class="setting-item" size="60"/>
+    </fieldset>
+
+    <div>
+      <h2 id="advanced-settings-label" class="settings-label">
+        <span class="collapse-icon">+</span> Advanced settings
+      </h2>
+      <div id="advanced-settings">
+	<fieldset>
+	  <legend>Refresh rate:</legend>
+          <input type="number" id="checkInterval" class="setting-item" size="5"/>minutes
+	</fieldset>
+	<fieldset>
+	  <legend>Query:</legend>
+          <input type="text" id="query" class="setting-item" size="80"/>
+	</fieldset>
+      </div>
+    </div>
+    
+    <button onclick="save_options()">Save</button>
+    <span id="status"></span>
+  </div>
 </body>
 </html>
