--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@ body {
 }
 
 </style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
+<script src="jquery-1.6.1.min.js" type="text/javascript"></script>
 <script src="notification.js" type="text/javascript"></script>
 <script>
 
