add handler for ajax failure

--- a/popup.html
+++ b/popup.html
@@ -36,66 +36,71 @@ body {
 <script src="jquery-1.6.1.min.js" type="text/javascript"></script>
 <script src="notification.js" type="text/javascript"></script>
 <script>
-
 function getNotes(issueId) {
-	$.get(getBaseUrl() + "/issues/" + issueId + ".xml", function(data) {
-		$(data).find("journal:last").each(function() {
-			var name = $(this).children("user").attr("name");
-			var notes = $(this).children("notes").text();
-			$(this).children("notes")
-			$("#notes-"+issueId).append(
-				$("<dl/>").append($("<dt/>").text(name + "さんからのメッセージ"))
-					.append($("<dd/>").text(notes))
-			);
-		});
-	});
+  $.get(getBaseUrl() + "/issues/" + issueId + ".xml", function(data) {
+    $(data).find("journal:last").each(function() {
+      var name = $(this).children("user").attr("name");
+      var notes = $(this).children("notes").text();
+      $(this).children("notes")
+      $("#notes-"+issueId).append(
+        $("<dl/>").append($("<dt/>").text("From " + name + ":"))
+          .append($("<dd/>").text(notes))
+      );
+    });
+  });
 }
 
 setTimeout(function() {
-	if(!localStorage["redmineUrl"]) {
-		$("#loaging-message").text("You should set up the first.");
-		chrome.extension.getBackgroundPage().goOptions();
-		return;
-	}
-	var lastReaded = new Date(0);
-	if(localStorage["lastReaded"]) {
-		lastReaded.setTime(localStorage["lastReaded"]);
-	}
-	$.get(getFeedUrl(), function(data) {
-			$("#loading-message").remove();
-			$("#header").show();
-			$(data).find("issue:lt(5)").each(function() {
-				var issue = $(this);
-				var updatedOn = new Date(issue.find("updated_on").text());
-				if(lastReaded < updatedOn) {
-					lastReaded.setTime(updatedOn.getTime());
-				}
+  if(!localStorage["redmineUrl"]) {
+    $("#loaging-message").text("You should set up the first.");
+    chrome.extension.getBackgroundPage().goOptions();
+    return;
+  }
+  var lastReaded = new Date(0);
+  if(localStorage["lastReaded"]) {
+    lastReaded.setTime(localStorage["lastReaded"]);
+  }
+  $.ajax({
+    url: getFeedUrl(),
+    type: 'GET',
+    cache: false,
+    success: function(data) {
+    $("#loading-message").remove();
+    $("#header").show();
+    $(data).find("issue:lt(5)").each(function() {
+      var issue = $(this);
+      var updatedOn = new Date(issue.find("updated_on").text());
+      if(lastReaded < updatedOn) {
+        lastReaded.setTime(updatedOn.getTime());
+      }
 				
-				var ticket = $('<div class="ticket"/>');
-				var issueId = issue.find("id").text();
-				ticket.append(
-					$("<a/>")
-						.attr("href", getBaseUrl() + "/issues/" + issueId)
-						.attr("target", "_blank")
-						.text(issue.find("subject").text())
-				);
-				ticket.append(
-					$("<p/>").text(issue.find("description").text())
-				);
-				ticket.append($("<div/>").attr("id", "notes-" + issueId));
-				getNotes(issueId);
-				$("body").append(ticket);
-			});
-		localStorage["lastReaded"] = lastReaded.getTime();
-		drawBadge(0);
-	});
+      var ticket = $('<div class="ticket"/>');
+      var issueId = issue.find("id").text();
+      ticket.append(
+        $("<a/>")
+          .attr("href", getBaseUrl() + "/issues/" + issueId)
+          .attr("target", "_blank")
+          .text(issue.find("subject").text())
+      );
+      ticket.append(
+        $("<p/>").text(issue.find("description").text())
+      );
+      ticket.append($("<div/>").attr("id", "notes-" + issueId));
+      getNotes(issueId);
+      $("body").append(ticket);
+    });
+    localStorage["lastReaded"] = lastReaded.getTime();
+    drawBadge(0);
+    },
+    error: function(request, status, e) {
+      $("#loading-message").text("Failed to load.");
+    }
+  });
 }, 0);
 </script>
 </head>
 <body>
-<div id="loading-message">
-読み込んでいます
-</div>
+<div id="loading-message">loading...</div>
 <div id="header" style="display:none;">
   <h1>Redmine Notification</h1>
   <img src="setting.png" onclick="chrome.extension.getBackgroundPage().goOptions();"/>
