--- a/background.html
+++ b/background.html
@@ -21,33 +21,38 @@ function scheduleRequest() {
 }
 
 function updateIssues() {
-	if(!settings.redmineUrl)
-		return;
-	$.ajax({
-		type: "GET",
-		url: getFeedUrl(),
-		cache: false,
-		dataType: "xml",
-		timeout: 10000,
-		success: function(data) {
-			var lastReaded = new Date(0);
-			if(localStorage["lastReaded"]) {
-				lastReaded.setTime(localStorage["lastReaded"]);
-			}
-			var unreadCount = 0;
-			var issues = $(data).find("issue");
+  if(!settings.redmineUrl)
+    return;
+  $.ajax({
+    type: "GET",
+    url: getFeedUrl(),
+    cache: false,
+    dataType: "xml",
+    timeout: 10000,
+    success: function(data) {
+      var lastReaded   = new Date(0);
+      var lastNotified = new Date(0);
+      if(localStorage["lastReaded"]) {
+        lastReaded.setTime(localStorage["lastReaded"]);
+      }
+      if(!localStorage["lastNotified"]) {
+        lastNotified.setTime(lastReaded.getTime());
+      }
+      var unreadCount = 0;
+      var issues = $(data).find("issue");
 
-			issues.each(function() {
-				var updatedOn = new Date($(this).find("updated_on").text());
-				if(lastReaded < updatedOn) {
-					if(unreadCount++ < 4)
-						showNotification($(this));
-					lastReaded.setTime(updatedOn.getTime());
-				}
-			});
-			drawBadge(unreadCount);
-		}
-	});
+      issues.each(function() {
+        var updatedOn = new Date($(this).find("updated_on").text());
+        if(lastNotified < updatedOn) {
+          lastNotified.setTime(updatedOn.getTime());
+          if(unreadCount++ < 4)
+            showNotification($(this));
+        }
+      });
+      drawBadge(unreadCount);
+      localStorage["lastNotified"] = lastNotified.getTime();
+    }
+  });
 }
 
 function requestPermission(callback) {
@@ -61,13 +66,15 @@ function showNotification(issue) {
 		var n = window.webkitNotifications.createNotification("icon.png",
 				issue.children("subject").text(),
 				issue.children("description").text());
-//		n.ondisplay = function() {
-//			setTimeout(function() { n.cancel() }, 10000);
-//		};
+		n.ondisplay = function() {
+			setTimeout(function() { n.cancel() }, 10000);
+		};
+/*
 		n.onclick = function() {
 			chrome.tabs.create({"url": settings.redmineUrl + "/issues/" + issue.children("id").text() });
 			n.cancel();
 		}
+*/
 		n.show();
    }
 }
