--- a/background.html
+++ b/background.html
@@ -1,93 +1,11 @@
 <html>
 <head>
-<script src="jquery-1.6.1.min.js" type="text/javascript"> </script>
-<script src="notification.js" type="text/javascript"> </script>
-<script>
-    var timer = null;
-var canvasContext;
-var iconImage;
-
-function goOptions() {
-    chrome.tabs.create({url : "options.html"});
-}
-
-function startRequest() {
-    updateIssues();
-    scheduleRequest();
-}
-
-function scheduleRequest() {
-    timer = window.setTimeout(startRequest, settings.checkInterval * 60 * 1000);
-}
-
-function updateIssues() {
-    if(!settings.redmineUrl)
-	return;
-    $.ajax({
-	type: "GET",
-	url: getFeedUrl(),
-	cache: false,
-	dataType: "xml",
-	timeout: 10000,
-	success: function(data) {
-	    var lastReaded   = new Date(0);
-	    var lastNotified = new Date(0);
-	    if(localStorage["lastReaded"]) {
-		lastReaded.setTime(localStorage["lastReaded"]);
-	    }
-	    if(localStorage["lastNotified"]) {
-		lastNotified.setTime(localStorage["lastNotified"]);
-	    } else {
-		lastNotified.setTime(lastReaded.getTime());
-	    }
-	    var unreadCount = 0;
-	    var issues = $(data).find("issue");
-	    
-	    $(issues.get().reverse()).each(function() {
-		var updatedOn = new Date($(this).find("updated_on").text());
-		if (lastNotified < updatedOn) {
-		    lastNotified.setTime(updatedOn.getTime());
-		    if(unreadCount < 4)
-			showNotification($(this));
-		}
-		if (lastReaded < updatedOn)
-		    unreadCount++;
-	    });
-	    drawBadge(unreadCount);
-	    localStorage["lastNotified"] = lastNotified.getTime();
-	}
-    });
-}
-
-function requestPermission(callback) {
-    webkitNotifications.requestPermission(callback);
-}
-function showNotification(issue) {
-    if (window.webkitNotifications.checkPermission() > 0) {
-	requestPermission(showNotification);
-    }
-    else {
-	var n = window.webkitNotifications.createNotification("icon.png",
-							      issue.children("subject").text(),
-							      issue.children("description").text());
-	n.ondisplay = function() {
-	    setTimeout(function() { n.cancel() }, 10000);
-	};
-
-	n.show();
-   }
-}
-
-function refresh() {
-    if(timer != null)
-	clearTimeout(timer);
-    startRequest();
-}
-startRequest();
-</script>
+    <script src="js/jquery-1.6.1.min.js"></script>
+    <script src="js/notification.js"></script>
+    <script src="js/background.js"></script>
 </head>
 <body>
-<img id="icon" src="icon.png"/>
-<canvas id="canvas" width="19" height="19"/>
+    <img id="icon" src="img/icon.png"/>
+    <canvas id="canvas" width="19" height="19"/>
 </body>
 </html>
