layering img, css, js and refactoring

--- a/background.html
+++ b/background.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <img id="icon" src="img/icon.png"/>
-    <canvas id="canvas" width="19" height="19"/>
+    <canvas id="canvas" width="19" height="19"></canvas>
 </body>
 </html>
